# logmon

./: LICENSE  README.md  pyproject.toml
src/logmon/: __init__.py  logmon.py
tests/: logmon_tests.py
