[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logmon"
version = "0.0.1"
authors = [
  { name="John Drummond", email="john@muopia.com" },
]
description = "A utility to monitor log files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/drummondj/logmon"
"Bug Tracker" = "https://github.com/drummondj/logmon/issues"
